--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 
-<input type ="text" id="input" button ="search"> 
-
-<div id="container">  </div>
+<input type ="text" id="keypress-input"> 
+<div id="container"> </div>
 
 
 	<script src = "data.js"> </script>	
